@@ -3,6 +3,7 @@
     * Migrate to built-in ‘next’ function.
     * Declare compatibility with current Python versions.
     * Depend on Python 3 compatible libraries.
+    * Wrap function introspection for Python 3 compatibility.
 
 2014-12-20  Ben Finney  <ben+python@benfinney.id.au>
 
